--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <a href="#about" class="nav-link text-dark">Tentang Kami</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#question" class="nav-link text-dark">Pertanyaan</a>
+                        <a href="#questions" class="nav-link text-dark">Pertanyaan</a>
                     </li>
                     <li class="nav-item">
                         <a href="#contact" class="nav-link text-dark">Kontak</a>
@@ -66,9 +66,9 @@
                             </div>
                             <h3 class="card-title mb-3">Aplikasi Solution</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quaerat voluptas! Amet unde nulla adipisci.
+                                Aplikasi solution ini dirancang untuk memudahkan pengguna dalam menemukan solusi atas berbagai permasalahan mereka dengan cepat dan efisien.
                             </p>
-                            <a href="#" class="btn btn-primary">Read More</a>
+                            <a href="#apk" class="btn btn-primary">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -80,9 +80,9 @@
                             </div>
                             <h3 class="card-title mb-3">Digital Marketing</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, quaerat voluptas! Amet unde nulla adipisci.
+                                Layanan digital marketing membantu bisnis untuk mencapai potensialnya secara efektif melalui berbagai strategi online, seperti SEO dan periklanan online.
                             </p>
-                            <a href="#" class="btn btn-dark">Read More</a>
+                            <a href="#digmar" class="btn btn-dark">Read More</a>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                             </div>
                             <h3 class="card-title mb-3">CCTV Offline & Online</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet. Quisquam, quaerat voluptas! Amet unde nulla adipisci. Quisquam, quaerat voluptas!
+                                Layanan CCTV offline dan online kami menyediakan pemantauan 24 jam yang dapat diakses dari mana saja, memberikan keamanan maksimal untuk properti Anda.
                             </p>
                             <a href="#" class="btn btn-primary">Read More</a>
                         </div>
@@ -106,9 +106,9 @@
                             <div class="h1 mb-3">
                                 <i class="bi bi-wifi"></i>
                             </div>
-                            <h3 class="card-title mb-3">Jaringan Internet Solution</h3>
+                            <h3 class="card-title mb-2">Jaringan Internet Solution</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet, and the consectetur adipisicing elits. as! Amet unde nul and yes.
+                                Layanan jaringan Internet Solution memberikan konektivitas yang handal dan cepat untuk mendukung kebutuhan digital Anda.
                             </p>
                             <a href="#" class="btn btn-dark">Read More</a>
                         </div>
@@ -122,7 +122,7 @@
                             </div>
                             <h3 class="card-title mb-3">Maintenance HW & SW</h3>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam voluptas! Amet unde nulla adipisci.
+                                Kami menyediakan layanan maintenance hardware dan software untuk memastikan kinerja perangkat dan aplikasi untuk sistem komputer anda tetap optimal.
                             </p>
                             <a href="#" class="btn btn-primary">Read More</a>
                         </div>
@@ -190,31 +190,31 @@
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#questions-One">
-                      Accordion Item #1
+                      Dimana saya bisa mendapat info lebih lanjut?
                     </button>
                   </h2>
                   <div id="questions-One" class="accordion-collapse collapse" data-bs-parent="#question">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+                    <div class="accordion-body">Anda bisa menghubungi kami di kontak yang tersedia di website ini atau bisa langsung datang ke tempat kami yang berlokasi di BTN SANUR 2, Kel.Empoang Selatan, Kab.Jeneponto.</div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#questions-Two">
-                      Accordion Item #2
+                      Bagaimana cara melakukan pemesanan?
                     </button>
                   </h2>
                   <div id="questions-Two" class="accordion-collapse collapse" data-bs-parent="#question">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                    <div class="accordion-body">Anda dapat menghubungi kami di halaman kontak yang tertera pada website.</div>
                   </div>
                 </div>
                 <div class="accordion-item">
                   <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#questions-Three">
-                      Accordion Item #3
+                      Apakah harga nya bisa di negosiasikan?
                     </button>
                   </h2>
                   <div id="questions-Three" class="accordion-collapse collapse" data-bs-parent="#question">
-                    <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                    <div class="accordion-body">Ya, harga tergantung pada jasa dan pemesanan apa yang ingin anda lakukan. Kami akan mencarikan barang yang sesuai dengan budget anda dengan kualitas yang tetap terjaga.</div>
                   </div>
                 </div>
               </div>
@@ -226,18 +226,18 @@
         <div class="container">
             <h2 class="text-center text-white">Company Founder</h2>
             <p class="lead text-center text-white mb-5">
-                Perusahaan ini dibuat pada tahun 2021, yang beranggotakan 3 orang pegawai.
+                Perusahaan ini dibuat pada tahun 2021, yang beranggotakan.
             </p>
             <div class="row g-4">
                 <div class="col-md-4 col-lg-4">
                     <div class="card bg-light">
                     <div class="card-body text-center">
-                        <img src="" class="rounded-circle mb-3" alt="">
+                        <img src="pic/dil.jpg" width="168" class="rounded-circle mb-3" alt="">
                         <h3 class="card-title mb-3">Nur Abdillah</h3>
                         <p class="card-text">Direktur CV.ChaChi</p>
-                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                        <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
+                        <a href="https://instagram.com/nurabdilllah33?igshid=NGVhN2U2NjQ0Yg=="><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        <a href="https://www.facebook.com/nur.abdillah.79025?mibextid=ZbWKwL"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="http://wa.me/+6285282665858"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
                     </div>
                     </div>
                 </div>
@@ -248,9 +248,9 @@
                         <img src="pic/nay.jpg" width="150" class="rounded-circle mb-3" alt="">
                         <h3 class="card-title mb-3">Andi Aliyah Nur Inayah</h3>
                         <p class="card-text">Wakil Direktur CV.ChaChi</p>
-                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                        <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
+                        <a href="https://instagram.com/andialiyaah_?igshid=NGVhN2U2NjQ0Yg=="><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100008836154950&mibextid=ZbWKwL"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="http://wa.me/+6281341394715"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
                     </div>
                 </div>
             </div>
@@ -258,12 +258,12 @@
             <div class="col-md-4 col-lg-4">
                 <div class="card bg-light">
                     <div class="card-body text-center">
-                        <img src="" class="rounded-circle mb-3" alt="">
+                        <img src="pic/bebs.jpg" width="138" class="rounded-circle mb-3" alt="">
                         <h3 class="card-title mb-3">Andi Agustiawati</h3>
                         <p class="card-text">Bendahara CV.ChaChi</p>
-                        <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-                        <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                        <a href="#"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
+                        <a href="https://instagram.com/andiagustiawati?igshid=NGVhN2U2NjQ0Yg=="><i class="bi bi-instagram text-dark mx-1"></i></a>
+                        <a href="https://www.facebook.com/andi.agustiawati.9?mibextid=ZbWKwL"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                        <a href="http://wa.me/+6281355004313"><i class="bi bi-whatsapp text-dark mx-1"></i></a>
                     </div>
                 </div>
             </div>
@@ -272,7 +272,7 @@
     </section>
 
     <!--Contact-->
-    <section class="p-5">
+    <section class="p-5" id="contact">
         <div class="container">
             <div class="row g-4">
                 <div class="col-md">
@@ -285,7 +285,7 @@
                             <span class="fw-bold">Email: </span>chachitwins2023@gmail.com
                         </li>
                         <li class="list-group-item">
-                            <span class="fw-bold">No Telp: </span>081341394715
+                            <span class="fw-bold">No Telp: </span>081355004313
                         </li>
                     </ul>
                 </div>
